# sec

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  sec.py  setup.py  setup_env.sh
docs/: API.md  USER_GUIDE.md
examples/: advanced_usage.py  basic_usage.py
src/sec_downloader/: __init__.py  __main__.py  cli.py  config.py  converter.py  downloader.py
tests/: test_config.py  test_downloader.py
